--- a/index.html
+++ b/index.html
@@ -185,11 +185,7 @@
   var fireballSize = 22;
 
   var getFireballSpeed = function (left) {
-    if (left) {
-      return 5;
-    } else {
-      return 2;
-    }
+    left ? 5 : 2;
   };
 
   var wizardSpeed = 3;
@@ -200,7 +196,7 @@
   };
 
   var getWizardX = function (width) {
-    return width/2 - wizardWidth/2;
+    return (width - wizardWidth)/2;
   };
 
   var getWizardY = function (height) {
