правки по заданию 2

--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
   var fireballSize = 22;
 
   var getFireballSpeed = function (left) {
-    left ? 5 : 2;
+    var speed;
+    left ? speed = 5 : speed = 2;
+    return speed;
   };
 
   var wizardSpeed = 3;
