--- a/index.html
+++ b/index.html
@@ -185,9 +185,7 @@
   var fireballSize = 22;
 
   var getFireballSpeed = function (left) {
-    var speed;
-    left ? speed = 5 : speed = 2;
-    return speed;
+    return left ? 5 : 2;
   };
 
   var wizardSpeed = 3;
